--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                    padding-bottom: 0px;
                    padding-left: 50px;">SEJARAH</a>
 
-        <a href="#GEOGRAFIS" 
+        <a href="#Geografis" 
             style="padding-top: 20px;
                    padding-right: 70px;
                    padding-bottom: 20px;
