--- a/inndexs.html
+++ b/inndexs.html
@@ -20,7 +20,7 @@
                    padding-bottom: 0px;
                    padding-left: 50px;">SEJARAH</a>
 
-        <a href="#GEOGRAFIS" 
+        <a href="#Geografis" 
             style="padding-top: 20px;
                    padding-right: 70px;
                    padding-bottom: 20px;
@@ -41,7 +41,7 @@
          <div id="card">
             <br>
             <article id="SEJARAH" class="card">
-               <h1>SEJARAH</h1>
+               <h1>bahasa </h1>
                <img src="images/alun alun bengkulu.jpg" alt="SEJARAH" class="featured-image" width="650px">
                <p>Bengkulu dalam bahasa Belanda disebut Benkoelen atau Bengkulen</p>
 
@@ -76,7 +76,7 @@
                <br>
             <article id="WISATA" class="card">
                <h1>WISATA</h1>
-               <img src="images/wisata di bengkulu.jpg" alt="WISATA" class="featured-image" width="500px">
+               <img src="images/wisata di bengkulu.jpg" alt="WISATA" class="featured-image" width="500px" height="500px">
                <p>Keindahan wisata Bengkulu yakni Air Terjun Singkai ini bakal sebanding dengan perjuangan mencapai tujuan</p>
 
                <p>Dalam bahasa Inggris disebut Bencoolen, sedangkan dalam bahasa melayu disebut Bangkahulu</p>
